--- a/src/content/blog/defaultBlog.mdx
+++ b/src/content/blog/defaultBlog.mdx
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: "Default Blog Post"
+title: "Blog Post"
 snippet: "Blog snippet"
 publishDate: "2022-11-05 15:36"
 image:
@@ -9,6 +9,6 @@ image:
     alt: "Saw",
   }
 category: "Remodeling"
-author: "Author"
+author: ""
 tags: [construction, remodeling, renovation]
 ---
